# CML_AMP_RAG_Studio

./: .env.example  .gitattributes  .gitignore  .output.txt  .project-metadata.yaml  README.md  cacerts.jks  catalog-entry.yaml  docker-compose.yaml  local-dev.sh  package-lock.json
api/: api.yaml  generate.sh
llm-service/: .gitignore  Dockerfile  JJL4WAJY5A3L4SVYJHLWTYK7OA4IFJ5A.json  JJL4WAJY5A3L4SVYJHLWTYK7OA4IFJ5A.md  JJL4WAJY5A3L4SVYJHLWTYK7OA4IFJ5A.txt  docling-output.txt  index_restore.py  index_restore_hard_way.py  pyproject.toml  runtime.Dockerfile
llm-service/app/: __init__.py  config.py  exceptions.py  main.py  rag_types.py  requirements.txt  super_duper_profiler.py  super_profiler.py
llm-service/app/ai/: __init__.py
llm-service/app/ai/indexing/: __init__.py  base.py  base_indexer.py  embedding_indexer.py  index.py  lda.py  summary_indexer.py
llm-service/app/ai/vector_stores/: __init__.py  chromadb.py  opensearch.py  pgvector.py  qdrant.py  vector_store.py  vector_store_factory.py
llm-service/app/routers/: __init__.py
llm-service/app/routers/index/: __init__.py  custom_tools.py
llm-service/app/services/: CaiiEmbeddingModel.py  CaiiModel.py  __init__.py  amp_update.py  caii.py  chat.py  chat_store.py  data_sources_metadata_api.py  doc_summaries.py  evaluators.py  llama_utils.py  llm_completion.py  metrics.py  models.py  qdrant.py  querier.py  rag_qdrant_vector_store.py  s3.py  session.py  utils.py  vector_store.py
llm-service/app/services/amp_metadata/: __init__.py
llm-service/app/services/caii/: CaiiEmbeddingModel.py  CaiiModel.py  __init__.py  caii.py  caii_reranking.py  types.py  utils.py
llm-service/app/services/caii_temp/: types.py
llm-service/app/services/chat/: chat.py  streaming_chat.py  suggested_questions.py  utils.py
llm-service/app/services/chat_history/: __init__.py  chat_history_manager.py  chat_store.py  paginator.py  s3_chat_history_manager.py  simple_chat_history_manager.py
llm-service/app/tests/: __init__.py  conftest.py
llm-service/examples/: README.md  calculator_tool_demo.py  calculator_tool_example.py  simple_calculator_tool.json
llm-service/performance_testing/: all_off.csv  animal_research_qa.csv  performance_testing.py  questions_mix.csv  raw_result_hyde_only.csv  raw_results.csv  raw_results_condensing_two_stage.csv  raw_results_hyde_condensing_two_stage.csv  raw_results_hyde_two_stage.csv  results.csv  topic_modeling.py  two_stage_only.csv
llm-service/reconciler/: mlflow_reconciler.py
llm-service/scripts/: index_restore_hard_way.py  mcp_test.py  restore_global_index.py  run_refresh_job.py
pybackend/: .gitignore  pyproject.toml  run.sh
pybackend/src/: app_main.py  log.py  main.py  run.py
pybackend/src/dal/: codec.py  data_source.py  data_source_file.py  session.py
pybackend/src/db/: provider.py
pybackend/src/java_migration/: client.py  migrate.py  types.py
pybackend/src/migration/: datastore.py  migrator.py
pybackend/src/openapi_server/: main.py  security_api.py
pybackend/src/python_migration/: python_client.py
pybackend/src/reconcilers/: delete_data_source.py  delete_data_source_file.py  delete_session.py  index_data_source_file.py  reconciler.py  summarize_data_source_file.py
pybackend/tests/: conftest.py
pybackend/tests/migration/: test_sqlite.py
(+607 files in other folders)
