[project]
name = "llm-service"
version = "0.1.0"
description = "Default template for UV package"
authors = [
    {name = "Conrado Silva Miranda", email = "csilvamiranda@cloudera.com"},
]
dependencies = [
    "llama-index-core>=0.10.68",
    "llama-index-readers-file>=0.1.33",
    "fastapi[standard]>=0.111.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "boto3>=1.36.1",
    "llama-index-embeddings-bedrock>=0.2.1",
    "llama-index-llms-bedrock>=0.3.4",
    "llama-index-llms-openai>=0.1.31",
    "llama-index-embeddings-openai>=0.1.11",
    "llama-index-vector-stores-qdrant>=0.2.17",
    "qdrant-client<1.13.0",
    "docx2txt>=0.8",
    "pandas>=2.2.3",
    "fastapi-utils>=0.8.0",
    "umap-learn>=0.5.7",
    "python-pptx>=1.0.2",
    "torch>=2.5.1",
    "pillow>=10.4.0",
    "transformers>=4.46.3",
    "docling>=2.15.0",
    "llvmlite==0.43.0",
    "llama-index-llms-bedrock-converse>=0.4.10",
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
    "detect-secrets>=1.5.0",
    "llama-index-postprocessor-bedrock-rerank>=0.3.1",
    "llama-index-postprocessor-nvidia-rerank>=0.4.0",
    "mlflow>=2.20.1",
    "llama-index-llms-azure-openai>=0.3.0",
    "llama-index-embeddings-azure-openai>=0.3.0",
    "llama-index-llms-nvidia>=0.3.2",
    "llama-index-storage-kvstore-s3>=0.3.0",
    "llama-index-vector-stores-opensearch>=0.5.5",
    "crewai[tools]>=0.119.0",
    "aiostream>=0.6.4",
    "opik>=1.7.22",
    "llama-index-callbacks-opik>=1.1.0",
    "mcp[cli]>=1.9.1",
    "crewai-tools[mcp]>=0.44.0",
    "pysqlite3-binary==0.5.4; platform_system == 'Linux'"
]
requires-python = ">=3.10,<=3.12"
readme = "README.md"
license = {text = "APACHE"}

[tool.uv]
override-dependencies = [
    "boto3-stubs==1.36.1",
    "botocore-stubs==1.36.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "lipsum>=0.1.2",
    "hypothesis>=6.122.1",
    "black>=24.10.0",
    "types-boto3-s3>=1.36.1",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.pdm]
distribution = false

[tool.mypy]
files = ["./app/"]
ignore_missing_imports = true
strict = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
disable_error_code = ["import-untyped", "assignment"]
implicit_reexport = false
